--- a/app/package.json
+++ b/app/package.json
@@ -5,6 +5,7 @@
         "build": "parcel build"
     },
     "devDependencies": {
+        "@tailwindcss/forms": "^0.5.1",
         "parcel": "^2.5.0",
         "postcss": "^8.4.13",
         "react": "^18.1.0",
